# world-news-api-clients

./: LICENSE  README.md  build.ps1  gen_python.sh  java-config.json  push_to_PyPI.sh  push_to_PyPI_test.sh  world-news-api-openapi-3.json
android/: README.md  build.gradle  git_push.sh  pom.xml
angular/: configuration.ts  git_push.sh
clojure/: git_push.sh  project.clj
cpp/: README.md
cpp/client/: CMakeLists.txt  OAIEnum.h  OAIExtractLinksResponse.cpp  OAIExtractLinksResponse.h  OAIExtractNewsLinks_200_response.cpp  OAIExtractNewsLinks_200_response.h  OAIExtractNewsResponse.cpp  OAIExtractNewsResponse.h  OAIExtractNews_200_response.cpp  OAIExtractNews_200_response.h  OAIExtractNews_200_response_images_inner.cpp  OAIExtractNews_200_response_images_inner.h  OAIExtractNews_200_response_videos_inner.cpp  OAIExtractNews_200_response_videos_inner.h  OAIGeoCoordinatesResponse.cpp  OAIGeoCoordinatesResponse.h  OAIGetGeoCoordinates_200_response.cpp  OAIGetGeoCoordinates_200_response.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAINews.cpp  OAINews.h  OAINewsApi.cpp  OAINewsApi.h  OAINewsArticle.cpp  OAINewsArticle.h  OAINewspaperFrontPages_200_response.cpp  OAINewspaperFrontPages_200_response.h  OAINewspaperFrontPages_200_response_front_page.cpp  OAINewspaperFrontPages_200_response_front_page.h  OAIOauth.h  OAIObject.h  OAIRetrieveNewsArticlesByIds_200_response.cpp  OAIRetrieveNewsArticlesByIds_200_response.h  OAIRetrieveNewsArticlesByIds_200_response_news_inner.cpp  OAIRetrieveNewsArticlesByIds_200_response_news_inner.h  (+23 more)
cpp/client/com.worldnewsapi/: OAINewsApi.cpp  OAINewsApi.h
cpp/client/com.worldnewsapi.client.model/: OAIInline_response_200.cpp  OAIInline_response_200.h  OAIInline_response_200_1.cpp  OAIInline_response_200_1.h  OAIInline_response_200_2.cpp  OAIInline_response_200_2.h  OAIInline_response_200_3.cpp  OAIInline_response_200_3.h  OAIInline_response_200_news.cpp  OAIInline_response_200_news.h  OAINews.cpp  OAINews.h
csharp/: README.md  appveyor.yml  git_push.sh  worldnewsapi.sln
dart/: README.md  git_push.sh
elixir/: README.md  mix.exs
elm/: README.md
erlang/: rebar.config
go/: README.md  api_news.go  client.go  configuration.go  git_push.sh  go.mod  utils.go  (+30 more)
rust/: Cargo.toml  README.md  git_push.sh
rust/.openapi-generator/: FILES
rust/docs/: ExtractLinksResponse.md  ExtractNews200Response.md  ExtractNews200ResponseImagesInner.md  ExtractNews200ResponseVideosInner.md  ExtractNewsLinks200Response.md  ExtractNewsResponse.md  GeoCoordinatesResponse.md  GetGeoCoordinates200Response.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2002.md  InlineResponse2003.md  InlineResponse200News.md  News.md  NewsApi.md  NewsArticle.md  NewspaperFrontPages200Response.md  NewspaperFrontPages200ResponseFrontPage.md  RetrieveNewsArticlesByIds200Response.md  RetrieveNewsArticlesByIds200ResponseNewsInner.md  RetrieveNewspaperFrontPage200Response.md  RetrieveNewspaperFrontPage200ResponseFrontPage.md  SearchNews200Response.md  SearchNews200ResponseNewsInner.md  SearchNewsResponse.md  SearchNewsSources200Response.md  SearchNewsSources200ResponseSourcesInner.md  TopNews200Response.md  TopNews200ResponseTopNewsInner.md  TopNews200ResponseTopNewsInnerNewsInner.md
rust/src/apis/: configuration.rs  mod.rs  news_api.rs
rust/src/models/: extract_links_response.rs  extract_news_200_response.rs  extract_news_200_response_images_inner.rs  extract_news_200_response_videos_inner.rs  extract_news_links_200_response.rs  extract_news_response.rs  geo_coordinates_response.rs  get_geo_coordinates_200_response.rs  inline_response_200.rs  inline_response_200_1.rs  inline_response_200_2.rs  inline_response_200_3.rs  inline_response_200_news.rs  mod.rs  news.rs  news_article.rs  newspaper_front_pages_200_response.rs  newspaper_front_pages_200_response_front_page.rs  retrieve_news_articles_by_ids_200_response.rs  retrieve_news_articles_by_ids_200_response_news_inner.rs  retrieve_newspaper_front_page_200_response.rs  retrieve_newspaper_front_page_200_response_front_page.rs  search_news_200_response.rs  search_news_200_response_news_inner.rs  search_news_response.rs  search_news_sources_200_response.rs  search_news_sources_200_response_sources_inner.rs  top_news_200_response.rs  top_news_200_response_top_news_inner.rs  top_news_200_response_top_news_inner_news_inner.rs
(+1520 files in other folders)
